err/flask-phantom-emoji.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji/PhantomOpenEmoji'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji/PhantomOpenEmoji/emoji'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji/PhantomOpenEmoji/emoji/DSLR_click'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji/PhantomOpenEmoji/emoji/angry_girl'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji/PhantomOpenEmoji/emoji/bgok'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji/PhantomOpenEmoji/emoji/cookie_fairy'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji/PhantomOpenEmoji/emoji/dancer'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji/PhantomOpenEmoji/emoji/geek_love'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji/PhantomOpenEmoji/emoji/hand_salute'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji/PhantomOpenEmoji/emoji/heartbeat'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji/PhantomOpenEmoji/emoji/high_hopes'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji/PhantomOpenEmoji/emoji/mad_scientist'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji/PhantomOpenEmoji/emoji/one_eyed_robot'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji/PhantomOpenEmoji/emoji/redbeard'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji/PhantomOpenEmoji/emoji/runner'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji/PhantomOpenEmoji/emoji/sewing_machine'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji/PhantomOpenEmoji/emoji/siamese_kitten'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji/PhantomOpenEmoji/emoji/smiling_cat_face_with_heart_shaped_eyes'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji/PhantomOpenEmoji/emoji/space_fight'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji/PhantomOpenEmoji/emoji/stuck_out_tongue'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji/PhantomOpenEmoji/emoji/two_men_in_love'...
Listing './lib/python3.5/site-packages/flask_phantom_emoji-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
